--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -159,7 +159,7 @@ nav {
 
 // HERO
 #hero-intro {
-    background-image: url(../images/header-back.jpg);
+    background-image: url(../images/header_back.jpg);
     background-repeat: no-repeat;
     height: 100%;
     background-size: cover;
@@ -258,17 +258,20 @@ footer {
     color: white;
     padding: 2rem 0 1rem 0;
 
-    .footer-contact {
-        color: $wax;
-        &:visited {
-            color: $wax;
-        }
-    }
+    // .footer-contact {
+    //     color: $wax;
+    //     &:visited {
+    //         color: $wax;
+    //     }
+    // }
 
     a {
         color: $honey;
         &:visited {
             color: $honey;
+        }
+        &:hover {
+            color: $wax;
         }
     }
 
@@ -391,7 +394,22 @@ textarea {
 
 
 // GALLERY
-
+#gallery {
+    img {
+        width: 100%;
+        height: 100%;
+        border-radius: 10px;
+        object-fit: cover;
+        scale: 1;
+        // border: 12px outset $purple-dark;
+        // &:hover {
+        //     opacity: .5;
+        //     cursor: pointer;
+        //     scale: 1.05;
+        //     transition: all 0.1s ease-out;
+        // }
+    }
+}
 
 
 
