Changed things based on feedback

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -1,6 +1,8 @@
 //Lord Vader Hates Fluffy Animals
 //Link Visited Hover Focus Active
 
+//Find a way to get the carousel buttons to be positioned on the bottom white transparent background
+
 * {
     font-family: 'Noto Sans';
 }
@@ -10,8 +12,10 @@ $purple: #734190;
 $purple-dark: #460A67;
 $purple-light: #B798C7;
 $purple-lighter: #ebd9f4;
+$purple-lightest: mix($color1: white, $color2: $purple-lighter, $weight: 75);
 $honey: #FED23B;
 $honey-dark: #EFBB0B;
+$honey-light: #f5d97d;
 $honey-darker: #d6a600;
 $wax: #FDF5BF;
 $wax-dark: #F7EE7F;
@@ -19,6 +23,19 @@ $yellow-pastel: #F8FA6B;
 
 $carousel-control-opacity: 1;
 $carousel-control-hover-opacity: 1;
+$carousel-indicator-active-bg: black;
+
+$accordion-bg: $purple-lightest;
+$accordion-button-bg: $purple-lighter;
+$accordion-button-active-bg: $purple;
+$accordion-button-active-color: white;
+$accordion-border-radius: 15px;
+$accordion-button-focus-box-shadow: 0 0 0 .25rem $purple-light;
+$accordion-button-icon: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='black'><path fill-rule='evenodd' d='M8 0q-.264 0-.523.017l.064.998a7 7 0 0 1 .918 0l.064-.998A8 8 0 0 0 8 0M6.44.152q-.52.104-1.012.27l.321.948q.43-.147.884-.237L6.44.153zm4.132.271a8 8 0 0 0-1.011-.27l-.194.98q.453.09.884.237zm1.873.925a8 8 0 0 0-.906-.524l-.443.896q.413.205.793.459zM4.46.824q-.471.233-.905.524l.556.83a7 7 0 0 1 .793-.458zM2.725 1.985q-.394.346-.74.74l.752.66q.303-.345.648-.648zm11.29.74a8 8 0 0 0-.74-.74l-.66.752q.346.303.648.648zm1.161 1.735a8 8 0 0 0-.524-.905l-.83.556q.254.38.458.793l.896-.443zM1.348 3.555q-.292.433-.524.906l.896.443q.205-.413.459-.793zM.423 5.428a8 8 0 0 0-.27 1.011l.98.194q.09-.453.237-.884zM15.848 6.44a8 8 0 0 0-.27-1.012l-.948.321q.147.43.237.884zM.017 7.477a8 8 0 0 0 0 1.046l.998-.064a7 7 0 0 1 0-.918zM16 8a8 8 0 0 0-.017-.523l-.998.064a7 7 0 0 1 0 .918l.998.064A8 8 0 0 0 16 8M.152 9.56q.104.52.27 1.012l.948-.321a7 7 0 0 1-.237-.884l-.98.194zm15.425 1.012q.168-.493.27-1.011l-.98-.194q-.09.453-.237.884zM.824 11.54a8 8 0 0 0 .524.905l.83-.556a7 7 0 0 1-.458-.793zm13.828.905q.292-.434.524-.906l-.896-.443q-.205.413-.459.793zm-12.667.83q.346.394.74.74l.66-.752a7 7 0 0 1-.648-.648zm11.29.74q.394-.346.74-.74l-.752-.66q-.302.346-.648.648zm-1.735 1.161q.471-.233.905-.524l-.556-.83a7 7 0 0 1-.793.458zm-7.985-.524q.434.292.906.524l.443-.896a7 7 0 0 1-.793-.459zm1.873.925q.493.168 1.011.27l.194-.98a7 7 0 0 1-.884-.237zm4.132.271a8 8 0 0 0 1.012-.27l-.321-.948a7 7 0 0 1-.884.237l.194.98zm-2.083.135a8 8 0 0 0 1.046 0l-.064-.998a7 7 0 0 1-.918 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3z'/></svg>");
+$accordion-button-active-icon: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='white'><path fill-rule='evenodd' d='M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M4.5 7.5a.5.5 0 0 0 0 1h7a.5.5 0 0 0 0-1z'/></svg>");
+$accordion-icon-width: 2rem;
+$accordion-border-width: 0;
+$accordion-border-color: $purple;
 
 
 // Required
@@ -53,8 +70,16 @@ h2 {
     font-size: 2rem;
 }
 
+h2 > button {
+    font-size: 2rem;
+}
+
 p {
-    font-size: 1.3rem;
+    font-size: 1.2rem;
+}
+
+a:hover {
+    text-decoration: underline dashed;
 }
 
 .my-container {
@@ -66,7 +91,7 @@ p {
 }
 
 .purple-heading {
-    font-size: 3rem;
+    font-size: 2.5rem;
     color: $purple-dark;
     margin-bottom: 2rem;
     border-bottom: 4px solid $purple-light;
@@ -86,7 +111,7 @@ p {
 }
 
 nav {
-    background-color: $purple;
+    background-color: $purple-dark;
     box-shadow: 0px 3px 15px rgba($color: $purple, $alpha: .5);
     div {
         ul {
@@ -108,16 +133,27 @@ nav {
                     color: white;
                     align-items: center;
                     justify-content: center;
+
+                    
+                    // My first styling
+                    // &:hover {
+                    //     background-color: $purple-lighter;
+                    //     color: black;
+                    //     border-bottom: 4px solid $purple-dark;
+                    //     text-decoration: none;
+                    // }
                     &:hover {
-                        background-color: $purple-lighter;
-                        color: black;
-                        border-bottom: 4px solid $purple-dark;
+                        text-decoration: underline dashed $purple-lighter 4px;
+                        text-underline-offset: 10px;
+                        color: white;
                     }
                     &:focus-visible {
                         outline: 3px solid $purple-lighter;
                     }
                     &:active {
-                        color: black;
+                        // color: black; My first styling
+                        color: white;
+                        text-decoration: underline solid $purple-lighter 4px;
                     }
                 }
             }
@@ -145,11 +181,19 @@ nav {
   }
 
   #logo {
-    background-color: white;
-    padding: .5rem .7rem;
+    // background-color: white;
+    // padding: .5rem .7rem;
+    padding: .5rem;
     img {
     height: 80px;
+    border-radius: 10px;
     }
+  }
+
+  a[aria-current="page"] {
+    text-decoration: underline dashed $purple-lighter 4px;
+    text-underline-offset: 10px;
+    color: white;
   }
 
 
@@ -160,20 +204,32 @@ nav {
 // HERO
 #hero-intro {
     background-image: url(../images/header_back.jpg);
+    background-color: rgb(124, 124, 124);
+    background-blend-mode: screen;
     background-repeat: no-repeat;
     height: 100%;
     background-size: cover;
+    // .button-regular {
+    //     border: 2px dashed $honey-darker;
+    //     &:hover {
+    //         box-shadow: none;
+    //         border: 2px solid black;
+    //     }
+    // }
 }
 
 #hero-intro-words {
-    height: calc(80vh - 96px);
-    padding: 4rem 3rem;
+    // height: calc(80vh - 96px);
+    padding: 2rem 3rem;
     text-align: center;
-    color: white;
-    h1 {
-        font-size: 2.2rem;
+    color: black;
+    p {
+        font-size: 2rem;
         line-height: 50px;
         margin-bottom: 1.4rem;
+        font-family: 'Aref Ruqaa';
+        font-weight: 700;
+        // text-shadow: 1px 1px 2px black;
     }
 }
 
@@ -183,15 +239,21 @@ nav {
     background-color: $honey;
     padding: 1rem 2.3rem;
     border-radius: 7px;
-    border: 1px solid $purple-dark;
-    box-shadow: 1px 1px 2px black;
+    border: 2px dashed black;
+    // box-shadow: 1px 1px 2px black;
     font-size: 1.3rem;
     &:hover {
         background-color: $honey-darker;
         color: black;
-        padding: 1.05rem 2.35rem;
-        font-size: 1.35rem;
         transition: all .2s ease;
+        text-decoration: none;
+        box-shadow: none;
+        border: 2px solid black;
+    }
+    &:active {
+        background-color: white;
+        border: 2px solid $honey-darker;
+        transition: none;
     }
 }
 
@@ -205,7 +267,8 @@ nav {
     img {
     width: 100%;
     object-fit: cover;
-    height: calc(80vh - 96px);
+    height: 440px;
+    max-height: calc(100vh - 50px);
     }
 }
 
@@ -224,19 +287,38 @@ nav {
 }
 
 .carousel-caption {
-    h5 {
-        text-shadow: 1px 1px 4px black;
-        font-size: 1.25rem;
+    // background-color: rgba($color: white, $alpha: .7);
+    // width: 100%;
+    // padding-bottom: 2rem;
+    // left: 0;
+    // bottom: 0;
+    z-index: 3;
+    p {
+        font-size: 1.6rem;
         font-weight: bolder;
+        color: black;
     }
+}
+
+#carouselCaptionWhite {
+    background-color: rgba($color: white, $alpha: .7);
+    width: 100%;
+    height: 110px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: 2;
 }
 
 .carousel .carousel-indicators button {
     width: 15px;
     height: 15px;
     border-radius: 100%;
- }
+}
 
+.carousel-indicators {
+    z-index: 4;
+}
 
 
 //HOME CONTENT
@@ -266,18 +348,21 @@ footer {
     // }
 
     a {
-        color: $honey;
+        color: $wax;
         &:visited {
-            color: $honey;
+            color: $wax;
         }
         &:hover {
-            color: $wax;
+            color: $honey;
+        }
+        &:hover i{
+            color: $honey;
         }
     }
 
     i {
         font-size: 3rem;
-        color: $honey;
+        color: $wax;
     }
     
     img {
@@ -285,7 +370,26 @@ footer {
     }
 }
 
+.footer-contact {
+    text-decoration: none;
+    &:hover {
+        text-decoration: none;
+    }
+    &:hover span {
+        text-decoration: underline dashed;
+    }
+    span {
+        text-decoration: underline;
+    }
+}
 
+.footerAlign {
+    vertical-align: middle;
+}
+
+.footerMB {
+    margin-bottom: 3.5rem;
+}
 
 
 //ABOUT
@@ -326,7 +430,7 @@ input, textarea {
     border-width: 2px;
     border-style: outset;
     border-color: $purple;
-    background-color: mix($color1: white, $color2: $purple-lighter, $weight: 75);
+    background-color: $purple-lightest;
     &:focus {
         outline-color: $purple;
         background-color: mix($color1: white, $color2: $purple-lighter, $weight: 25);
@@ -341,9 +445,9 @@ textarea {
     margin-top: 2rem;
     margin-bottom: 6rem;
     p {
-        font-size: 1.5rem;
+        font-size: 1.3rem;
         a {
-            font-size: 1.5rem;
+            font-size: 1.3rem;
         }
     }
 }
@@ -374,21 +478,61 @@ textarea {
 
 
 // SERVICES AND PRICING
-.service-section {
-    margin-bottom: 5rem;
-    h2 {
-        margin-bottom: 1.3rem;
+// .service-section {
+//     margin-bottom: 5rem;
+//     h2 {
+//         margin-bottom: 1.3rem;
+//     }
+// }
+
+// .service-price {
+//     background-color: $purple-lighter;
+//     padding: 1rem;
+//     margin-bottom: 1rem;
+//     border: 2px solid $purple-dark;
+//     border-radius: 10px;
+//     font-weight: bold;
+// }
+
+.accordion-button {
+    font-size: 2rem;
+    font-weight: 700;
+    border: 5px solid $purple;
+    border-radius: 15px;
+    padding-bottom: 1.25rem;
+    &:not(.collapsed) {
+        border-radius: 10px 10px 0 0;
+        box-shadow: none;
+        &:focus {
+            border-color: $purple-light;
+        }
+    }
+    &:focus {
+        border-color: $purple-dark;
     }
 }
 
-.service-price {
-    background-color: $purple-lighter;
-    padding: 1rem;
-    margin-bottom: 1rem;
-    border: 2px solid $purple-dark;
-    border-radius: 10px;
-    font-weight: bold;
+#accordionServices {
+    p {
+        margin-top: 1rem;
+    }
 }
+
+.accordion-item {
+    margin-bottom: 1rem;
+    border-radius: 15px;
+    &:not(:first-of-type) {
+        border-radius: 15px;
+    }
+}
+
+.accordion-body {
+    border: 5px solid $purple;
+    border-radius: 0 0 15px 15px;
+}
+
+
+
 
 
 
@@ -422,35 +566,23 @@ textarea {
   // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
     #logo {
-        padding: .5rem 1rem;
+        // padding: .5rem 1rem;
+        padding: .5rem;
     }
 
     #hero-intro-words {
-        h1 {
-            font-size: 3rem;
+        p {
             line-height: 1.4;
+            font-size: 2.3rem;
         }
     }
 }
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
-    #hero-intro-words {
-        height: calc(100vh - 96px);
-        padding: 5rem 3rem;
-
-        h1 {
-            font-size: 2.2rem;
-        }
-    }
-
-    #featuredQuilts {
-        height: calc(100vh - 96px);
-    }
-
     .carousel-item {
         img {
-        height: calc(100vh - 96px);
+        height: 500px;
         }
     }
 
@@ -485,6 +617,7 @@ textarea {
                 li {
                     a {
                         width: 7rem;
+                        height: 50px; // Second nav styling
                     }
                 }
             }
@@ -492,9 +625,14 @@ textarea {
     }
 
     #hero-intro-words {
-        h1 {
-            font-size: 3rem;
+        p {
             line-height: 1.4;
+        }
+    }
+
+    .carousel-item {
+        img {
+        height: 700px;
         }
     }
 
@@ -513,7 +651,7 @@ textarea {
 
 // X-Large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-
+    
 }
 
 // XX-Large devices (larger desktops, 1400px and up)
